# b4n

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: release.yml
assets/plugins/: describe.yaml  dive.yaml
assets/syntaxes/: syntaxes.packdump  yaml.sublime-syntax
assets/themes/: dark-fixed.yaml  dark.yaml  light-fixed.yaml  light.yaml
b4n/: cli.rs  main.rs
b4n-common/: Cargo.toml  backoff.rs  lib.rs  logging.rs  notifications.rs  utils.rs  utils.tests.rs
b4n-common/expr/: logical_expressions.rs  logical_expressions.tests.rs  mod.rs  selective_map.rs
b4n-config/: Cargo.toml  config.rs  errors.rs  history.rs  lib.rs  plugins.rs  syntax.rs  theme.rs  utils.rs  watcher.rs
b4n-config/keys/: binding.rs  binding.tests.rs  combination.rs  combination.tests.rs  command.rs  command.tests.rs  mod.rs
b4n-config/themes/: colors.rs  mod.rs  theme.rs
b4n-kube/: Cargo.toml  client.rs  discovery.rs  lib.rs  observer.rs  status.rs  stream_backoff.rs  utils.rs
b4n-kube/core/: kind.rs  mod.rs  namespace.rs  resource_ref.rs
b4n-kube/crds/: columns.rs  observer.rs
b4n-kube/plugins/: context.rs  mod.rs
b4n-kube/resources/: crd_columns.rs  mod.rs
b4n-kube/stats/: metrics.rs  observer.rs
b4n-kube/watcher/: client.rs  list.rs  mod.rs  observer.rs  result.rs  state.rs  utils.rs  watch.rs
b4n-list/: Cargo.toml  item.rs  scrollable_list.rs  scrollable_list.tests.rs
b4n-list/filter/: filterable_list.rs  filterable_list.tests.rs
b4n-lists/: Cargo.toml  item.rs  lib.rs  scrollable_list.tests.rs
b4n-lists/filter/: filterable_list.rs  filterable_list.tests.rs
b4n-tasks/: Cargo.toml  dir_lister.rs  forwarder.rs  highlighter.rs  lib.rs
b4n-tasks/commands/: delete_resources.rs  get_new_yaml.rs  get_yaml.rs  list_contexts.rs  list_resource_ports.rs  list_themes.rs  mod.rs  new_kubernetes_client.rs  new_yaml.rs  run_plugin.rs  save_configuration.rs  save_content.rs  set_new_yaml.rs  set_yaml.rs
b4n-tasks/tasks/: executor.rs  task.rs
b4n-tui/: Cargo.toml  lib.rs  plugins.rs  plugins.tests.rs  plugins_ext.rs  response.rs  table.rs  tui.rs  utils.rs
b4n-tui/grid/: header.rs  header.tests.rs  item.rs  mod.rs  tabular_list.rs
b4n-tui/table/: column.rs  header.rs  header.tests.rs  item.rs  mod.rs  tabular_list.rs
b4n-tui/widgets/: footer.rs  input.rs  list.rs  mod.rs  select.rs  validator.rs
b4n-tui/widgets/actions/: action.rs  action.tests.rs  actions_list.rs  mod.rs  plugins.rs
b4n-tui/widgets/dialogs/: checkbox.rs
b4n-tui/widgets/history/: bottom_pane.rs  message.rs  messages_list.rs
b4n-tui/widgets/modal/: button.rs  checkbox.rs  controls_group.rs  dialog.rs  selector.rs
b4n-utils/: Cargo.toml  lib.rs  tracker.rs
b4n-utils/expr/: logical_expressions.rs  logical_expressions.tests.rs
b4n/core/: app.rs  data.rs  discovery.rs  forwarder.rs  highlighter.rs  mod.rs  worker.rs
b4n/core/commands/: delete_resources.rs  get_yaml.rs  list_contexts.rs  list_resource_ports.rs  list_themes.rs  mod.rs  new_kubernetes_client.rs  set_yaml.rs
b4n/core/managers/: client.rs  views.rs
b4n/core/tasks/: task.rs
b4n/kube/: extensions.rs  mod.rs
b4n/kube/kinds/: kind.rs  kinds_list.rs
b4n/kube/resources/: mod.rs  observer.rs  resource.rs  resource.tests.rs  resource_data.rs  resources_list.rs
b4n/kubernetes/: metrics.tests.rs  mod.rs  utils.rs
b4n/kubernetes/kinds/: kind.rs  kinds_list.rs
b4n/kubernetes/resources/: mod.rs  resource.rs  resource.tests.rs  resources_list.rs
b4n/kubernetes/watchers/: crd.rs  mod.rs  observer.rs  resource.rs  statistics.rs
b4n/ui/: mod.rs  tui.rs
b4n/ui/lists/: column.rs  header.rs  item.rs  mod.rs  tabular_list.rs
b4n/ui/presentation/: mod.rs  select.rs  utils.rs  utils.tests.rs
b4n/ui/viewers/: utils.rs
b4n/ui/views/: common.rs  mod.rs
b4n/ui/widgets/: command_palette.rs  footer.rs  input.rs  mod.rs  select.rs  side_select.rs
src/: cli.rs  logging.rs  main.rs  utils.rs
src/app/: app.rs  config.rs  data.rs  discovery.rs  mod.rs  observer.rs  observer_result.rs  utils.rs  worker.rs
src/app/commands/: cmd_delete_resources.rs  cmd_list_contexts.rs  cmd_new_kubernetes_client.rs  cmd_save_configuration.rs  delete.rs  delete_resources.rs  executor.rs  get_yaml.rs  list_contexts.rs  mod.rs  new_kubernetes_client.rs  save_config.rs  save_configuration.rs  save_history.rs  task.rs
src/app/configuration/: config.rs  history.rs  mod.rs  watcher.rs
src/app/lists/: actions_list.rs  column.rs  command.rs  commands_list.rs  filterable_list.rs  filterable_list.tests.rs  header.rs  header.tests.rs  item.rs  kinds_list.rs  mod.rs  resources_list.rs  scrollable_list.rs
src/app/managers/: client.rs  client_manager.rs  mod.rs
src/app/tasks/: executor.rs  task.rs
src/core/: app.rs  data.rs  discovery.rs  forwarder.rs  highlighter.rs  mod.rs  observer.rs  utils.rs  worker.rs
src/core/commands/: delete_resources.rs  get_yaml.rs  list_resource_ports.rs  list_themes.rs  mod.rs  new_kubernetes_client.rs  save_configuration.rs  save_history.rs  set_yaml.rs
src/core/configuration/: config.rs  history.rs  mod.rs  watcher.rs
src/core/managers/: client.rs  views.rs
src/core/tasks/: executor.rs  task.rs
src/kubernetes/: client.rs  kind.rs  metrics.rs  mod.rs  namespace.rs  resource_ref.rs  utils.rs
src/kubernetes/kinds/: kind.rs  kinds_list.rs
src/kubernetes/resources/: context.rs  crd_columns.rs  kind.rs  mod.rs  ports.rs  resource.rs  resource.tests.rs  resources_list.rs
src/kubernetes/watchers/: crd.rs  mod.rs  observer.rs  resource.rs  statistics.rs
src/logging/: utils.rs
src/ui/: colors.rs  key_bindings.rs  key_bindings.tests.rs  mod.rs  theme.rs  tui.rs  utils.rs
src/ui/keys/: binding.rs  binding.tests.rs  combination.rs  combination.tests.rs  command.rs  command.tests.rs  mod.rs
src/ui/lists/: column.rs  header.rs  header.tests.rs  item.rs  item.tests.rs  mod.rs  scrollable_list.rs  scrollable_list.tests.rs  tabular_list.rs
src/ui/pages/: home.rs
src/utils/: logical_expressions.rs  logical_expressions.tests.rs  mod.rs
(+252 files in other folders)
