[package]
name = "b4n"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = { version = "1.0" }
arboard = { version = "3.6", default-features = false }
backoff = { version = "0.4" }
base64 = { version = "0.22" }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
delegate = { version = "0.13" }
futures = { version = "0.3" }
k8s-openapi = { version = "0.25", features = ["latest"] }
kube = { version = "1.0", features = ["client", "derive", "runtime", "ws"] }
notify = { version = "8.0" }
ratatui = { version = "0.29", features = ["crossterm", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
sha1 = { version = "0.10" }
syntect = { version = "5.2" }
textwrap = { version = "0.16" }
thiserror = { version = "2.0" }
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "time", "io-util", "macros"] }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "std",
    "fmt",
    "time",
    "env-filter",
] }
tui-input = { version = "0.11" }
tui-term = { version = "0.2" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rstest = { version = "0.25" }

[build-dependencies]
syntect = { version = "5.2" }

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
lto = 'fat'       # Enable more aggressive link-time optimization
opt-level = 'z'   # Optimize for size
panic = 'abort'   # Abort on panic
strip = 'symbols' # Strip debuginfo and symbols from binary
