[workspace]
resolver = "3"
members = [
    "b4n-common",
    "b4n-config",
    "b4n-kube",
    "b4n-list",
    "b4n-tasks",
]

[workspace.package]
version = "0.2.8"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
b4n-common = { path = "b4n-common" }
b4n-config = { path = "b4n-config" }
b4n-kube = { path = "b4n-kube" }
b4n-list = { path = "b4n-list" }
b4n-tasks = { path = "b4n-tasks" }
anyhow = { version = "1.0" }
backon = { version = "1.6" }
crossterm = { version = "0.28", features = ["event-stream"] }
k8s-openapi = { version = "0.26", features = ["latest"] }
kube = { version = "2.0", features = ["client", "derive", "runtime", "ws"] }
notify = { version = "8.0" }
ratatui = { version = "0.29", features = ["crossterm", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
sha1 = { version = "0.10" }
syntect = { version = "5.3" }
thiserror = { version = "2.0" }
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "time", "io-util", "macros"] }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "std",
    "fmt",
    "time",
    "env-filter",
] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "b4n"
path = "./b4n/main.rs"

[package]
name = "b4n"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
b4n-common = { workspace = true }
b4n-config = { workspace = true }
b4n-kube = { workspace = true }
b4n-list = { workspace = true }
b4n-tasks = { workspace = true }
anyhow = { workspace = true }
arboard = { version = "3.6", default-features = false }
base64 = { version = "0.22" }
clap = { version = "4.5", features = ["derive"] }
crossterm = { workspace = true }
delegate = { version = "0.13" }
futures = { version = "0.3" }
k8s-openapi = { workspace = true }
kube = { workspace = true }
notify = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
textwrap = { version = "0.16" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tui-input = { version = "0.11" }
tui-term = { version = "0.2" }
uuid = { workspace = true }

[dev-dependencies]
rstest = { version = "0.26" }

[build-dependencies]
syntect = { workspace = true }

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
lto = 'fat'       # Enable more aggressive link-time optimization
opt-level = 'z'   # Optimize for size
panic = 'abort'   # Abort on panic
strip = 'symbols' # Strip debuginfo and symbols from binary
