[package]
name = "b4n-tasks"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
b4n-common = { workspace = true }
b4n-config = { workspace = true }
b4n-kube = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
ratatui = { workspace = true }
serde_yaml = { workspace = true }
syntect = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = {workspace = true }
uuid = { workspace = true }
