[package]
name = "b4n-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
b4n-common = { workspace = true }
b4n-config = { workspace = true }
b4n-kube = { workspace = true }
b4n-list = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
delegate = { workspace = true }
futures = { workspace = true }
ratatui-core = { workspace = true }
ratatui-widgets = { workspace = true }
ratatui-crossterm = { workspace = true }
textwrap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tui-input = { workspace = true }
